Fix cropped action button in FF

--- a/components/byu-user-info/byu-user-info.sass
+++ b/components/byu-user-info/byu-user-info.sass
@@ -13,6 +13,8 @@
   color: $byuNavy !important
   text-align: right
   height: 100%
+  box-sizing: border-box
+  grid-row: 2 / 3
 
   @media(min-width: $breakMdSm)
     padding: 0.65em 1.1em
